Fix/alert history UI fixes (#5776)
* fix: remove extra padding from alert overview query section tabs

* fix: add padding to alert overview container

* fix: improve breadcrumb click behavior

* chore: temporarily hide reset button from alert details timepicker

* fix: improve breadcrumb click behavior

* chore: hide alert firing since

* fix: don't use the data state renderer for timeline table

--- a/frontend/src/pages/AlertDetails/alertDetails.styles.scss
+++ b/frontend/src/pages/AlertDetails/alertDetails.styles.scss
@@ -48,16 +48,20 @@
 		margin-top: 10px;
 	}
 	&__breadcrumb {
+		ol {
+			align-items: center;
+		}
 		padding-left: 16px;
-		.ant-breadcrumb-link {
+		.breadcrumb-item {
 			color: var(--text-vanilla-400);
 			font-size: 14px;
 			line-height: 20px;
 			letter-spacing: 0.25px;
+			padding: 0;
 		}
 
 		.ant-breadcrumb-separator,
-		span.ant-breadcrumb-link {
+		.breadcrumb-item--last {
 			color: var(--var-vanilla-500);
 			font-family: 'Geist Mono';
 		}
